--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -1,6 +1,8 @@
 /* Colors 
  * Based on colors from Base16: http://chriskempson.github.io/base16/#default.
  */
+ @import url('https://fonts.googleapis.com/css?family=Gaegu');
+
 $red:      #ac4142;
 $orange:   #d28445;
 $yellow:   #f4bf75;
@@ -10,17 +12,18 @@ $blue:     #6a9fb5;
 $magenta:  #aa759f;
 $brown:    #8f5536;
 $default:  #505050;
+$mint:     #48D8D0;
 
 $white:      #fff;
 $lightgrey:  #eee;
 $black:      #000;
 
-$theme-color: $blue;
+$theme-color: $mint;
 $theme-color-dark: darken($theme-color, 10%);
 
 $post-date-color: #9a9a9a;
 $title-color: #313131;
-$masthead-title-small-color: #c0c0c0;
+$masthead-title-small-color: #221E1F;
 
 /* Layout */
 $reverse-layout: true;
@@ -28,5 +31,5 @@ $overlay-sidebar: false;
 
 /* Font stack */
 $font-serif: "PT Serif", Georgia, "Times New Roman", serif;
-$font-sans: "PT Sans", Helvetica, Arial, sans-serif;
+$font-sans: "Gaegu","PT Sans", Helvetica, Arial, sans-serif;
 $font-font-awesome: FontAwesome;
