--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -20,9 +20,10 @@ $lightgrey:  #eee;
 $black:      #000;
 
 $theme-color: $mint;
-$theme-color-dark: darken($theme-color, 10%);
+$theme-color-dark: darken($theme-color, 15%);
 
 $post-date-color: #9a9a9a;
+$post-title: #1F2124;
 $title-color: #313131;
 $masthead-title-small-color: #221E1F;
 
