--- a/_scss/component/_tag.scss
+++ b/_scss/component/_tag.scss
@@ -4,7 +4,7 @@
   padding: 0 .5rem;
   margin-right: .5rem;
   border-radius: 4px;
-  color: $theme-color;
+  color: $post-title;
   font-family: $font-sans;
   font-size: 90%;
   &:before {
