--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -49,7 +49,7 @@
 /* Sidebar content */
 .sidebar a {
   font-weight: normal;
-  color: $white;
+  color: $sidebar-text;
 }
 .sidebar-item {
   padding: 1rem;
