--- a/_scss/component/_post.scss
+++ b/_scss/component/_post.scss
@@ -8,7 +8,7 @@
   @media (min-width: 38rem) {
     font-size: .8rem;
 
-    h1 { font-size: 1.6rem; }
+    h1 { font-size: 1.7rem; }
     h2 { 
       margin: 2em 0 1em 0;
       font-size: 1.0rem; 
@@ -62,7 +62,7 @@
   color: #999;
 }
 .related-posts li a:hover {
-  color: $theme-color;
+  color: $cyan;
   text-decoration: none;
 }
 .related-posts li a:hover small {
