--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -24,6 +24,7 @@ $theme-color-dark: darken($theme-color, 15%);
 
 $post-date-color: #9a9a9a;
 $post-title: #1F2124;
+$sidebar-text: #011627;
 $title-color: #313131;
 $masthead-title-small-color: #221E1F;
 
