--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -23,7 +23,7 @@
   overflow-y: auto;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-size: .875rem; /* 15px */
-  color: rgba(255,255,255,.6);
+  color: #566270;
   @include transition(all .3s ease-in-out);
 
   @if $reverse-layout {
