--- a/_scss/component/_masthead.scss
+++ b/_scss/component/_masthead.scss
@@ -23,6 +23,7 @@
       text-decoration: none;
     }
     small {
+      margin-left: 110px;
       font-size: 75%;
       font-weight: 400;
       color: $masthead-title-small-color;
