--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -210,7 +210,7 @@ a.sidebar-nav-item:focus {
       text-decoration: none;
     }
     p {
-      color: #404146;
+      color: rgb(168, 255, 238);
     }
   }
 }
