--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -1,33 +1,34 @@
 /* Colors 
  * Based on colors from Base16: http://chriskempson.github.io/base16/#default.
  */
- @import url('https://fonts.googleapis.com/css?family=Gaegu');
- @import url('https://fonts.googleapis.com/css?family=Jua');
+@import url('https://fonts.googleapis.com/css?family=Gaegu');
+@import url('https://fonts.googleapis.com/css?family=Jua');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR');
 
-$red:      #ac4142;
-$orange:   #d28445;
-$yellow:   #f4bf75;
-$green:    #90a959;
-$cyan:     #75b5aa;
-$blue:     #6a9fb5;
-$magenta:  #aa759f;
-$brown:    #8f5536;
-$default:  #505050;
-$mint:     #17E5BC;
-$back: #000D33;
+$red: #ac4142;
+$orange: #d28445;
+$yellow: #f4bf75;
+$green: #90a959;
+$cyan: #75b5aa;
+$blue: #6a9fb5;
+$magenta: #aa759f;
+$brown: #8f5536;
+$default: #505050;
+$mint: #17e5bc;
+$back: #000d33;
 
-$white:      #fff;
-$lightgrey:  #eee;
-$black:      #000;
+$white: #fff;
+$lightgrey: #eee;
+$black: #000;
 
 $theme-color: $back;
 $theme-color-dark: darken($theme-color, 15%);
 
 $post-date-color: #9a9a9a;
-$post-title: #1F2124;
+$post-title: #1f2124;
 $sidebar-text: $mint;
 $title-color: #313131;
-$masthead-title-small-color: #221E1F;
+$masthead-title-small-color: #221e1f;
 
 /* Layout */
 $reverse-layout: true;
@@ -35,5 +36,6 @@ $overlay-sidebar: false;
 
 /* Font stack */
 $font-serif: "PT Serif", Georgia, "Times New Roman", serif;
-$font-sans: "Jua","Gaegu","PT Sans", Helvetica, Arial, sans-serif;
+$font-sans: 'Noto Sans KR', "Jua", "Gaegu", "PT Sans", Helvetica, Arial,
+	sans-serif;
 $font-font-awesome: FontAwesome;
