--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -35,7 +35,7 @@ $reverse-layout: true;
 $overlay-sidebar: false;
 
 /* Font stack */
-$font-serif: "PT Serif", Georgia, "Times New Roman", serif;
-$font-sans: 'Noto Sans KR', "Jua", "Gaegu", "PT Sans", Helvetica, Arial,
+$font-serif: 'Noto Sans KR', "PT Serif", Georgia, "Times New Roman", serif;
+$font-sans: "Jua", 'Noto Sans KR', "Gaegu", "PT Sans", Helvetica, Arial,
 	sans-serif;
 $font-font-awesome: FontAwesome;
