--- a/_scss/component/_tag.scss
+++ b/_scss/component/_tag.scss
@@ -54,7 +54,7 @@
 		}
 		a {
 			// text-decoration: none;
-			color: #268b82;
+			// color: #268b82;
 		}
 		.post-date {
 			display: inline-block;
