--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -15,141 +15,141 @@
 
 /* Style and "hide" the sidebar */
 .sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 15rem;
-  visibility: hidden;
-  overflow-y: auto;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-size: .875rem; /* 15px */
-  color: rgb(168, 255, 238);
-  @include transition(all .3s ease-in-out);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 15rem;
+	visibility: hidden;
+	overflow-y: auto;
+	font-family: "PT Sans", Helvetica, Arial, sans-serif;
+	font-size: .875rem; /* 15px */
+	color: rgb(168, 255, 238);
+	@include transition(all .3s ease-in-out);
 
-  @if $reverse-layout {
-    left: auto;
-    right: -14rem;
-  } @else {
-    left: -14rem;
-    right: auto;
-  }
+	@if $reverse-layout {
+		left: auto;
+		right: -14rem;
+	} @else {
+		left: -14rem;
+		right: auto;
+	}
 
-  @if $theme-color != $default {
-    background-color: $theme-color;
-  } @else {
-    background-color: darken($theme-color-dark, 10%);
-  }
+	@if $theme-color != $default {
+		background-color: $theme-color;
+	} @else {
+		background-color: darken($theme-color-dark, 10%);
+	}
 }
 @media (min-width: 30em) {
-  .sidebar {
-    font-size: .75rem; /* 14px */
-  }
+	.sidebar {
+		font-size: .75rem; /* 14px */
+	}
 }
 
 /* Sidebar content */
 .sidebar a {
-  font-weight: normal;
-  color: $sidebar-text;
+	font-weight: normal;
+	color: $sidebar-text;
 }
 .sidebar-item {
-  padding: 1rem;
+	padding: 1rem;
 }
 .sidebar-item p:last-child {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 /* Sidebar nav */
 .sidebar-nav {
-  border-bottom: 1px solid rgba(255,255,255,.1);
+	border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 .sidebar-nav-item {
-  display: block;
-  padding: .5rem 1rem;
-  border-top: 1px solid rgba(255,255,255,.1);
+	display: block;
+	padding: .5rem 1rem;
+	border-top: 1px solid rgba(255, 255, 255, .1);
 }
 .sidebar-nav-item-sub {
-  &:before {
-    content: "";
-    padding-left: 1em;
-  }
-  font-size: 85%;
-  line-height: 85%;
+	&:before {
+		content: "";
+		padding-left: 1em;
+	}
+	font-size: 85%;
+	line-height: 85%;
 }
 .sidebar-nav-item.active,
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
-  text-decoration: none;
-  background-color: rgba(255,255,255,.1);
-  border-color: transparent;
+	text-decoration: none;
+	background-color: rgba(255, 255, 255, .1);
+	border-color: transparent;
 }
 
 @media (min-width: 48em) {
-  .sidebar-item {
-    padding: 1.5rem;
-  }
-  .sidebar-nav-item {
-    padding-left:  1.5rem;
-    padding-right: 1.5rem;
-  }
+	.sidebar-item {
+		padding: 1.5rem;
+	}
+	.sidebar-nav-item {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
 }
 
 /* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
 .sidebar-checkbox {
-  position: absolute;
-  opacity: 0;
-  @include prefixer(user-select, none, webkit moz spec);
+	position: absolute;
+	opacity: 0;
+	@include prefixer(user-select, none, webkit moz spec);
 }
 
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
-  position: absolute;
-  top:  .8rem;
-  @if $reverse-layout {
-    left: auto;
-    right: 1rem;
-  } @else {
-    left: 1rem;
-    right: auto;
-  }
-  display: block;
-  padding: .25rem .75rem;
-  color: $theme-color;
-  background-color: $white;
-  border-radius: .25rem;
-  cursor: pointer;
+	position: absolute;
+	top: .8rem;
+	@if $reverse-layout {
+		left: auto;
+		right: 1rem;
+	} @else {
+		left: 1rem;
+		right: auto;
+	}
+	display: block;
+	padding: .25rem .75rem;
+	color: $theme-color;
+	background-color: $white;
+	border-radius: .25rem;
+	cursor: pointer;
 }
 
 .sidebar-toggle:before {
-  display: inline-block;
-  width: 1rem;
-  height: .75rem;
-  content: "";
-  @include background-image(linear-gradient(to bottom, $theme-color-dark, $theme-color-dark 20%, $white 20%, $white 40%, $theme-color-dark 40%, $theme-color-dark 60%, $white 60%, $white 80%, $theme-color-dark 80%, $theme-color-dark 100%));
+	display: inline-block;
+	width: 1.1rem;
+	height: .25rem;
+	content: "";
+	@include background-image(linear-gradient(to bottom, $theme-color-dark, $theme-color-dark 20%, $white 20%, $white 40%, $theme-color-dark 40%, $theme-color-dark 60%, $white 60%, $white 80%, $theme-color-dark 80%, $theme-color-dark 100%));
 }
 
 .sidebar-toggle:active,
 #sidebar-checkbox:focus ~ .sidebar-toggle,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
-  color: $white;
-  background-color: $theme-color;
+	color: $white;
+	background-color: $theme-color;
 }
 
 .sidebar-toggle:active:before,
 #sidebar-checkbox:focus ~ .sidebar-toggle:before,
 #sidebar-checkbox:checked ~ .sidebar-toggle:before {
-  @include background-image(linear-gradient(to bottom, $white, $white 20%, $theme-color-dark 20%, $theme-color-dark 40%, $white 40%, $white 60%, $theme-color-dark 60%, $theme-color-dark 80%, $white 80%, $white 100%));
+	@include background-image(linear-gradient(to bottom, $white, $white 20%, $theme-color-dark 20%, $theme-color-dark 40%, $white 40%, $white 60%, $theme-color-dark 60%, $theme-color-dark 80%, $white 80%, $white 100%));
 }
 
 @media (min-width: 30.1em) {
-  .sidebar-toggle {
-    position: fixed;
-  }
+	.sidebar-toggle {
+		position: fixed;
+	}
 }
 
 @media print {
-  .sidebar-toggle {
-    display: none;
-  }
+	.sidebar-toggle {
+		display: none;
+	}
 }
 
 /* Slide effect
@@ -168,49 +168,52 @@ a.sidebar-nav-item:focus {
 .wrap,
 .sidebar,
 .sidebar-toggle {
-  @include prefixer(backface-visibility, hidden, webkit ms spec);
+	@include prefixer(backface-visibility, hidden, webkit ms spec);
 }
 .wrap,
 .sidebar-toggle {
-  @include transition(transform .3s ease-in-out);
+	@include transition(transform .3s ease-in-out);
 }
 
 #sidebar-checkbox:checked + .sidebar {
-  z-index: 10;
-  visibility: visible;
+	z-index: 10;
+	visibility: visible;
 }
 
 #sidebar-checkbox:checked ~ .wrap {
-  @include transform(translateX(if($overlay-sidebar,0,if($reverse-layout, -14rem, 14rem))));
+	@include transform(translateX(if($overlay-sidebar,0,if($reverse-layout, -14rem, 14rem))));
 }
 
 #sidebar-checkbox:checked ~ .sidebar {
-  @include transform(translateX(if($reverse-layout, -14rem, 14rem)));
-  @if $overlay-sidebar {
-    box-shadow: .25rem 0 .5rem rgba(0,0,0,.1);
-    @if $reverse-layout { box-shadow: -.25rem 0 .5rem rgba(0,0,0,.2); }
-  }
+	@include transform(translateX(if($reverse-layout, -14rem, 14rem)));
+	@if $overlay-sidebar {
+		box-shadow: .25rem 0 .5rem rgba(0, 0, 0, .1);
+		@if $reverse-layout {
+			box-shadow: -.25rem 0 .5rem rgba(0, 0, 0, .2);
+		}
+	}
 }
 
 #sidebar-checkbox:checked ~ .sidebar-toggle {
-  @include transform(translateX(if($reverse-layout, -14rem, 14rem)));
-  @if $overlay-sidebar {
-    box-shadow: 0 0 0 .25rem $white;
-  }
+	@include transform(translateX(if($reverse-layout, -14rem, 14rem)));
+	@if $overlay-sidebar {
+		box-shadow: 0 0 0 .25rem $white;
+	}
 }
 
 .sidebar-personal-info {
-  .sidebar-personal-info-section {
-    &:not(:first-of-type) {
-      margin-top: .75rem;
-    }
-    line-height: 1rem;
-    a, strong {
-      color: $white;
-      text-decoration: none;
-    }
-    p {
-      color: rgb(168, 255, 238);
-    }
-  }
+	.sidebar-personal-info-section {
+		&:not(:first-of-type) {
+			margin-top: .75rem;
+		}
+		line-height: 1rem;
+		a,
+		strong {
+			color: $white;
+			text-decoration: none;
+		}
+		p {
+			color: rgb(168, 255, 238);
+		}
+	}
 }
