--- a/_scss/component/_post.scss
+++ b/_scss/component/_post.scss
@@ -1,72 +1,84 @@
 .post {
-  margin-bottom: 4em;
+	margin-bottom: 4em;
 
-  h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
-  }
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-weight: 700;
+	}
 
-  @media (min-width: 38rem) {
-    font-size: .8rem;
+	@media (min-width: 38rem) {
+		font-size: .8rem;
 
-    h1 { font-size: 1.7rem; }
-    h2 { 
-      margin: 2em 0 1em 0;
-      font-size: 1.0rem; 
-    }
-    h3, h4, h5, h6 {
-      margin: 2em 0 1em 0;
-      font-size: 0.8rem;
-    }
-  }
+		h1 {
+			font-size: 1.7rem;
+		}
+		h2 {
+			margin: 2em 0 1em 0;
+			font-size: 1.0rem;
+		}
+		h3,
+		h4,
+		h5,
+		h6 {
+			margin: 2em 0 1em 0;
+			font-size: 0.8rem;
+		}
+	}
 
-  .post-title {
-    // color: $post-title;
-    color: $mint;
-    margin-top: 0;
-  }
+	.post-title {
+		// color: $post-title;
+		color: $mint;
+		margin-top: 0;
+	}
 
-  .post-date {
-    display: inline-block;
-    margin-top: -.5rem;
-    margin-bottom: 1rem;
-    color: $post-date-color;
-  }
+	.post-date {
+		display: inline-block;
+		margin-top: -.5rem;
+		margin-bottom: 1rem;
+		color: $post-date-color;
+	}
 
-  .post-more {
-    margin-top: .5em;
-    text-align: right;
-    .fa{
-      margin-right: .2em;
-    }
-  }
+	.post-more {
+		margin-top: .5em;
+		text-align: right;
+		.fa {
+			margin-right: .2em;
+		}
+	}
 
-  article {
-    line-height: 1.4rem;
-  }
+	article {
+		line-height: 1.4rem;
+		a {
+			color: #4f86c6;
+		}
+	}
 }
 
 /* Related posts */
 .related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  border-top: 1px solid $lightgrey;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	border-top: 1px solid $lightgrey;
 }
 .related-posts {
-  padding-left: 0;
-  list-style: none;
+	padding-left: 0;
+	list-style: none;
 }
 .related-posts h3 {
-  margin-top: 0;
+	margin-top: 0;
 }
 .related-posts li small {
-  font-size: 75%;
-  color: #999;
+	font-size: 75%;
+	color: #999;
 }
 .related-posts li a:hover {
-  color: $cyan;
-  text-decoration: none;
+	color: $cyan;
+	text-decoration: none;
 }
 .related-posts li a:hover small {
-  color: inherit;
+	color: inherit;
 }
-
