포스트 제목 디자인 수정

--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -20,9 +20,7 @@
 .container {
 	max-width: 28rem;
 	a {
-		@if $theme-color != $default {
-			color: $theme-color;
-		}
+		color: $theme-color !important;
 	}
 }
 @media (min-width: 38em) {
