--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,12 @@
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "pub-3189199434233237",
+        enable_page_level_ads: true
+      });
+    </script>
     {% endif %}
   </body>
   {% if site.disqus_short_name %}
